actual file commit

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,10 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+#idea
+.idea/
+
+#json confing files
+client_secret.json
+lectures2018-spring.json
